- avoid updating fulltext index when updated fields are not 'searchable_fields'  - remove whitespace

--- a/spec/fixtures/stories.yml
+++ b/spec/fixtures/stories.yml
@@ -8,6 +8,7 @@ sanshiro:
 思ったら背中にお灸（きゅう）のあとがいっぱいあったので、三四郎（さんしろう）
 の記憶に残っている。じいさんが汗をふいて、肌を入れて、女の隣に腰をかけたまで
 よく注意して見ていたくらいである。"
+  popularity: 10
   updated_at: 2008-04-05 12:34:56
   created_at: 2008-04-05 12:34:56
 
@@ -20,6 +21,7 @@ neko:
 ーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た
 。しかもあとで聞くとそれは書生という人間中で一番獰悪（どうあく）な種族であった
 そうだ。"
+  popularity: 15
   updated_at: 2008-04-01 12:34:56
   created_at: 2008-04-01 12:34:56
 
